[project]
name = "odoo-addons-oca-credit-control"
version = "17.0.20240618.0"
dependencies = [
    "odoo-addon-account_financial_risk>=17.0dev,<17.1dev",
    "odoo-addon-sale_financial_risk>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
